<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <group android:menuCategory="container">
        <item android:id="@+id/menu1"
            android:title="@string/lang"
            android:orderInCategory="3"
            android:icon = "@drawable/ic_settings_black_24dp"
            app:showAsAction="collapseActionView" />
        <item android:id="@+id/menu4"
            android:title="@string/settings"
            android:orderInCategory="2"
            android:icon = "@drawable/ic_settings_black_24dp"
            app:showAsAction="collapseActionView" />
        <item android:id="@+id/menu2"
            android:title="@string/favorite_btn"
            android:orderInCategory="2"
            android:icon = "@drawable/ic_favorite_24dp"
            app:showAsAction="always" />
    </group>
</menu>